# llm-rl-environments-lil-course

./: .gitignore  README.md
chapters/: 01.md  02.md  03.md  04.md  05.md  06.md  07.md  08.md  09.md  10.md
chapters/images/excalidraw/: llm_training_stages.excalidraw
environments/tictactoe/: README.md  pyproject.toml  tictactoe.py  tictactoe_basic.py  training_config_rl1.toml  training_config_rl2.toml
images/excalidraw/: grpo.excalidraw  rlvr.excalidraw
training_configs/: primerl_sft.toml
