[project]
name = "tictactoe"
description = "Tic-Tac-Toe environment"
tags = ["games", "train", "eval"]
version = "0.8.3"
requires-python = ">=3.10"
dependencies = [
    "verifiers>=0.1.9.post2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build]
include = ["tictactoe.py", "pyproject.toml"]
